// TODO: 1.3.3 | Use https://plugins.gradle.org/plugin/dev.vfyjxf.modaccessor, requires Java 21
// Settings > Build, Execution, Deployment > Build Tools > Gradle > Gradle JVM
plugins {
    id 'com.matthewprenger.cursegradle' version '1.4.0'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.105'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = "${minecraft_version}-${mod_version}"
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

legacyForge {
    version = "${minecraft_version}-${forge_version}"

    validateAccessTransformers = false

    accessTransformers.from 'src/main/resources/META-INF/accesstransformer.cfg'

    parchment {
        minecraftVersion = minecraft_version
        mappingsVersion = mapping_version
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    runs {
        configureEach {
            gameDirectory = project.file('run')

            jvmArguments = ["-XX:+IgnoreUnrecognizedVMOptions", "-XX:+AllowEnhancedClassRedefinition"]

            systemProperty('forge.logging.console.level', 'debug')
            systemProperty('terminal.jline', 'true')

            programArgument('-mixin.config=kubejs_tfc.mixins.json')
        }

        client {
            client()
        }

        server {
            server()

            programArgument('-nogui')
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenCentral()
    maven {
        // JEI
        name = "ModMaven"
        url = "https://modmaven.k-4u.nl"
    }
    maven {
        // Jade
        name = "Curse Maven"
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        // Patchouli
        name = "BlameJared"
        url = "https://maven.blamejared.com"
    }
    maven {
        // Shedaniel's maven (Architectury API)
        url = "https://maven.architectury.dev"
        content {
            includeGroup "dev.architectury"
        }
    }
    maven {
        // Lat (KubeJS and Rhino)
        name = "latvian.dev"
        url = "https://maven.latvian.dev/releases"
    }
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroupByRegex("software\\.bernie.*")
            includeGroup("com.eliotlash.mclib")
        }
    }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    flatDir {
        dir 'libs'
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

dependencies {
    modImplementation "curse.maven:terrafirmacraft-302973:${tfc_identifier}"
        modRuntimeOnly "curse.maven:cyanide-541676:${cyanide_identifier}"
    modImplementation "curse.maven:firmalife-453394:${firmalife_identifier}"
    // modImplementation "curse.maven:rosia-856122:${rosia_identifier}"
    modCompileOnly "curse.maven:tfccc-820815:${tfccc_identifier}" // Breaks things in dev runtime
    modCompileOnly "curse.maven:arborfirmacraft-877545:${arbor_identifier}"
    modImplementation "curse.maven:precision-prospecting-700638:${precpros_identifier}"
    modImplementation "curse.maven:beneath-1113980:${beneath_identifier}"
    modImplementation "curse.maven:tfc-artisanal-1059361:${artisanal_identifier}"

    modRuntimeOnly "mezz.jei:jei-${minecraft_version}-forge:${jei_version}"

    modCompileOnly "vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}:api"
    modRuntimeOnly "vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}"

    modCompileOnly "curse.maven:jade-324717:${jade_version}"
    modRuntimeOnly "curse.maven:jade-324717:${jade_version}"

    modImplementation "dev.latvian.mods:kubejs-forge:${kubejs_version}"
    modImplementation "dev.latvian.mods:rhino-forge:${rhino_version}"
    modImplementation "dev.architectury:architectury-forge:${architectury_version}"

    modImplementation "curse.maven:entityjs-967617:${entityjs_version}"
    modImplementation "software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}"
    implementation "com.eliotlash.mclib:mclib:20"

    modCompileOnly "dev.emi:emi-forge:${emi_version}+${minecraft_version}:api"
    modRuntimeOnly "dev.emi:emi-forge:${emi_version}+${minecraft_version}"

    // This *must* be before mixin's annotation processor (for versions lower than 0.2.0-rc.3, which we are due to Kube and will not jij an upgraded version out of principle) as refmaps will be incomplete otherwise
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.2.0-rc.2"))
    annotationProcessor("org.spongepowered:mixin:${mixin_version}:processor")
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            tfc_version_range      : tfc_version_range,
            kube_version_range     : kube_version_range,
            firmalife_version_range: firmalife_version_range
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

legacyForge.ideSyncTask generateModMetadata

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'MixinConfigs'            : "kubejs_tfc.mixins.json"
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}
